# apgi-validation

./: .bandit.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  APGI-API.py  APGI-Bayesian-Estimation-Framework.py  APGI-Computational-Benchmarking.py  APGI-Cross-Species-Scaling.py  APGI-Cultural-Neuroscience.py  APGI-Entropy-Implementation.py  APGI-Equations.md  APGI-Equations.py  APGI-Falsification-Framework.py  APGI-Formal-Model-Enhanced-Full.py  APGI-Formal-Model-Enhanced.py  APGI-Formal-Model.py  APGI-Full-Dynamic-Model.py  APGI-Liquid-Network-Implementation.py  APGI-Multimodal-Classifier.py  APGI-Multimodal-Integration.py  APGI-Open-Science-Framework.py  APGI-Parameter-Estimation-Full.py  APGI-Parameter-Estimation-Protocol.py  APGI-Parameter-Estimation.py  APGI-Parameter-Specifications.md  APGI-Psychological-States-CLI.py  APGI-Psychological-States-GUI.py  APGI-Psychological-States-claude.py  APGI-Psychological-States-deepseek.py  APGI-Psychological-States.py  APGI-Turing-Machine.py  APGI_API.py  APGI_Computational_Benchmarking.py  APGI_Computational_Benchmarking_Enhanced_Results.json  APGI_Cross_Species_Scaling.py  APGI_Cultural_Neuroscience.py  APGI_Entropy_Implementation.py  APGI_Equations.py  (+67 more)
.keys/: backup_hmac_key.enc  key_metadata.json  pickle_secret_key.enc
Falsification/: APGI-Falsification-Aggregator.py  APGI-Falsification-Protocol-GUI.py  APGI-Falsification-Protocols-GUI.py  (+67 more)
Falsification-Protocols/: Protocol-1.py  Protocol-2.py  Protocol-3.py  Protocol-4.py  Protocol-5.py  Protocol-6.py  __init__.py  protocol_gui.py
(+551 files in other folders)
