[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apgi-validation"
version = "1.3.0"
description = "Adaptive Pattern Generation and Integration Theory Implementation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "numpy>=1.21.0",
    "pyyaml>=6.0.0",
    "pandas>=1.3.0"
]

[project.scripts]
apgi-cli = "main:cli"

[tool.setuptools.packages.find]
include = ["utils*", "Validation*", "Falsification*", "Theory*"]

[tool.mutmut]
paths_to_mutate = "Validation/"
backup = false
runner = "pytest -v"
tests_dir = "tests/"
dict_synonyms = ["Struct", "Bunch"]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
